src/objects/Project_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Client_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Project Details</relationshipLabel>
        <relationshipName>Project_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <label>Implementation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product Development</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise services</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Mail__c</fullName>
        <label>Manager Mail</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Managerof project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Employee__c.Role__r.Employee_Role__c</field>
                <operation>equals</operation>
                <value>Project Manager</value>
            </filterItems>
            <infoMessage>Employee with project manager will only lookup in the manager pop up</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Project Details</relationshipLabel>
        <relationshipName>Project_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Employee2__c.Employee_Role__c</field>
                <operation>equals</operation>
                <value>Project Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee2__c</referenceTo>
        <relationshipLabel>Project Details</relationshipLabel>
        <relationshipName>Project_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_code__c</fullName>
        <displayFormat>Prj-{0000}</displayFormat>
        <label>Project code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Satrt_Date__c</fullName>
        <label>Satrt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>